--- a/com.osm2xp.generation/.classpath
+++ b/com.osm2xp.generation/.classpath
@@ -11,7 +11,7 @@
 	<classpathentry kind="src" path="src/test/java/"/>
 	<classpathentry kind="src" path="src/main/resources/"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1552632241588/source/commons-io-2.6-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/geonames-ws-client.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1553686141917/source/geonames-ws-client-1.1.9-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/geonames-ws-client.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1562134492724/source/geonames-ws-client-1.1.9-sources-1562140734537.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/h2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json-simple.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jts-core.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1556519188331/source/jts-core-1.16.0-sources-1556548124229.jar"/>
