--- a/com.osm2xp.console/pom.xml
+++ b/com.osm2xp.console/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>com.osm2xp.console</artifactId>
-	<version>4.0.0</version>
+	<version>4.1.0</version>
 	<packaging>jar</packaging>
 	<name>console</name>
 	<url>https://sourceforge.net/projects/osm2xp</url>
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>com.osm2xp</groupId>
 		<artifactId>com.osm2xp.console.parent</artifactId>
-		<version>4.0.0-SNAPSHOT</version>
+		<version>4.1.0-SNAPSHOT</version>
 		<relativePath>../releng-console</relativePath>
 	</parent>
 
@@ -123,6 +123,7 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
+                        	<outputDirectory>${build.folder.target.bin}</outputDirectory>
                         	<finalName>osm2xpc-${project.version}</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
                             <descriptors>
@@ -274,7 +275,7 @@
 		<dependency>
 			<groupId>com.osm2xp</groupId>
 			<artifactId>com.osm2xp.classification.core</artifactId>
-			<version>4.0.0-SNAPSHOT</version>
+			<version>4.1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
