--- a/releng-app/pom.xml
+++ b/releng-app/pom.xml
@@ -10,7 +10,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>com.osm2xp.parent</artifactId>
-	<version>4.0.0</version>
+	<version>4.1.0</version>
 	<packaging>pom</packaging>
 	<name>OSM2XP</name>
 	<organization>
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>com.osm2xp</groupId>
   		<artifactId>com.osm2xp.build</artifactId>
-  		<version>4.0.0-SNAPSHOT</version>
+  		<version>4.1.0-SNAPSHOT</version>
 		<relativePath>../releng</relativePath>
 	</parent>
 
@@ -42,16 +42,16 @@
 		<build.qualifier>'t'yyyyMMddHHmm</build.qualifier>
 		<build.folder.target>../builds</build.folder.target>
 		<build.folder.p2>p2</build.folder.p2>
-		<build.folder.bin>bin</build.folder.bin>
 		<build.folder.target.secured>../deploy/secured</build.folder.target.secured>
 		<build.folder.target.unsecured>../deploy/unsecured</build.folder.target.unsecured>
-		<build.folder.target.bin>../builds/${build.folder.bin}</build.folder.target.bin>
 		<build.folder.target.p2>../builds/${build.folder.p2}</build.folder.target.p2>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<build.folder.application>OSM2XP</build.folder.application>
-		<build.folder.fullpath>${build.folder.target.bin}/${build.folder.application}/${build.folder.type}</build.folder.fullpath>
-		<build.file.win32.fullpath>${build.folder.target.bin}/${build.folder.application}/${build.folder.type}/${build.file}.zip</build.file.win32.fullpath>
-		<build.file.linux.fullpath>${build.folder.target.bin}/${build.folder.application}/${build.folder.type}/${build.file}.tar.gz</build.file.linux.fullpath>
+		<build.folder.fullpath>${build.folder.target.bin}/</build.folder.fullpath>
+<!-- 		<build.file.win32.fullpath>${build.folder.target.bin}/${build.folder.type}/${build.file}.zip</build.file.win32.fullpath> -->
+<!-- 		<build.file.linux.fullpath>${build.folder.target.bin}/${build.folder.type}/${build.file}.tar.gz</build.file.linux.fullpath> -->
+		<build.file.win32.fullpath>${build.folder.target.bin}/${build.file}.zip</build.file.win32.fullpath>
+		<build.file.linux.fullpath>${build.folder.target.bin}/${build.file}.tar.gz</build.file.linux.fullpath>
 		<build.folder.type>test</build.folder.type>
 		<build.file>osm2xp-${project.version}</build.file>
 		<build.file.zip>osm2xp.zip</build.file.zip>
