--- a/com.osm2xp.generation/.classpath
+++ b/com.osm2xp.generation/.classpath
@@ -12,9 +12,9 @@
 	<classpathentry kind="src" path="src/main/resources/"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1552632241588/source/commons-io-2.6-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/geonames-ws-client.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1562134492724/source/geonames-ws-client-1.1.9-sources-1562140734537.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/h2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/h2.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1565793941292/source/h2-1.3.161-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json-simple.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jts-core.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1556519188331/source/jts-core-1.16.0-sources-1556548124229.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jts-core.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1566282007118/source/jts-core-1.16.0-sources-1566282677525.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mapdb.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/trove4j.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1552632241588/source/trove4j-3.0.3-sources.jar"/>
