Preprocessor support work, more facades, small fixes for GeoIndex and UI
Change-Id: Ia03dbad9711b4534525a47e63591164b7a6a82f5

--- a/com.osm2xp.generation/.classpath
+++ b/com.osm2xp.generation/.classpath
@@ -16,7 +16,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/json-simple.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jts-core.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1566282007118/source/jts-core-1.16.0-sources-1566282677525.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mapdb.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1566829490806/source/guava-27.0.1-jre-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/trove4j.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1552632241588/source/trove4j-3.0.3-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="staticlib/animal-sniffer-annotations-1.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="staticlib/annotations-13.0.jar"/>
