--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,10 +15,10 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file releng/pom.xml
-name: Upload artifact
-  uses: actions/upload-artifact@v1.0.0
-  with:
-    # Artifact name
-    name: OSM2XP    
-    # Directory containing files to upload
-    path: builds/bin/
+    - name: Upload artifact
+      uses: actions/upload-artifact@v1.0.0
+      with:       
+        # Artifact name
+        name: OSM2XP    
+        # Directory containing files to upload
+        path: builds/bin/
