--- a/com.osm2xp.core/.classpath
+++ b/com.osm2xp.core/.classpath
@@ -9,16 +9,16 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/main/java/"/>
 	<classpathentry kind="src" path="src/test/java/"/>
-	<classpathentry exported="true" kind="lib" path="lib/javaGeom.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1569232424323/source/javaGeom-0.11.1-sources-1569234400779.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javaGeom.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1580193633795/source/javaGeom-0.11.1-sources-1580196589632.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/osmosis-pbf.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/activation.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1552975380805/source/commons-lang-2.6-sources-1552994425697.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-core.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jaxb-impl.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1569501294018/source/jaxb-impl-2.2.11-sources-1569501449609.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxb-impl.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1580193633795/source/jaxb-impl-2.2.11-sources-1580195112453.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/openmap.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/osmosis-core.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/osmosis-osm-binary.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/osmosis-osm-binary.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1580193633795/source/osmosis-osm-binary-0.43.1-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/osmosis-xml.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/protobuf-java.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
