--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_deploy:
  
 deploy:
  provider: releases
- api_key: "03a63a5233a1e31d6c4cbe769b8070a47ab5bdbc"
+ api_key: ${{ secrets.GITHUB_TOKEN }}
  file_glob: true
  file: 
   - builds/bin/*.zip
