--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_deploy:
  
 deploy:
  provider: releases
- api_key: ${{ secrets.GITHUB_TOKEN }}
+ api_key: ${{ secrets.PREVED_MEDVED }}
  file_glob: true
  file: 
   - builds/bin/*.zip
