--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ deploy:
   provider: releases
   api_key: "$GITHUB_API_TOKEN"
   file_glob: true
+  overwrite: true
   file: 
     - builds/bin/*.zip
     - builds/bin/*.tgz
