Add .tar.gz to deployed files list
Change-Id: I1ed16d35ca051648560dbe48775e90687e318430

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ deploy:
   file: 
     - builds/bin/*.zip
     - builds/bin/*.tgz
+    - builds/bin/*.tar.gz
   skip_cleanup: true
   on:
     tags: true
