Fix non-Latin chars in airfield ID, fix Cancel behaviour for existing folder
Change-Id: I0373d677f7b62fed94b340b4455cb43d09644923

--- a/com.osm2xp.generation/build.properties
+++ b/com.osm2xp.generation/build.properties
@@ -5,4 +5,5 @@ bin.includes = META-INF/,\
                .,\
                lib/,\
                staticlib/,\
-               lib/jdom.jar
+               lib/jdom.jar,\
+               lib/icu4j.jar
