--- a/com.osm2xp.console/pom.xml
+++ b/com.osm2xp.console/pom.xml
@@ -277,5 +277,10 @@
 			<artifactId>com.osm2xp.classification.core</artifactId>
 			<version>4.4.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.ibm.icu</groupId>
+		    <artifactId>icu4j</artifactId>
+		    <version>65.1</version>
+		</dependency>		
 	</dependencies>
 </project>
