--- a/com.osm2xp.generation/pom.xml
+++ b/com.osm2xp.generation/pom.xml
@@ -81,7 +81,13 @@
 								    <groupId>org.jdom</groupId>
 								    <artifactId>jdom</artifactId>
 								    <version>1.1.3</version>
-								</dependency>																		
+								</dependency>				
+								<!-- https://mvnrepository.com/artifact/com.ibm.icu/icu4j -->
+								<dependency>
+								    <groupId>com.ibm.icu</groupId>
+								    <artifactId>icu4j</artifactId>
+								    <version>65.1</version>
+								</dependency>																														
 							</artifactItems>
 							<outputDirectory>lib</outputDirectory>
 							<stripVersion>true</stripVersion>
