--- a/com.osm2xp.core/.classpath
+++ b/com.osm2xp.core/.classpath
@@ -7,8 +7,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src/main/java/"/>
-	<classpathentry kind="src" path="src/test/java/"/>
+	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaGeom.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1584433188989/source/javaGeom-0.11.1-sources-1584434240757.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/osmosis-pbf.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/activation.jar"/>
