--- a/com.osm2xp.generation/.classpath
+++ b/com.osm2xp.generation/.classpath
@@ -8,15 +8,14 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src/main/java/"/>
-	<classpathentry kind="src" path="src/test/java/"/>
-	<classpathentry kind="src" path="src/main/resources/"/>
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/test/java"/>
+	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1579783205424/source/commons-io-2.6-sources-1579783274596.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/geonames-ws-client.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1568263035740/source/geonames-ws-client-1.1.9-sources-1568294391814.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/h2.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1565793941292/source/h2-1.3.161-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json-simple.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jts-core.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1566282007118/source/jts-core-1.16.0-sources-1566282677525.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/mapdb.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1566829490806/source/guava-27.0.1-jre-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/trove4j.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1552632241588/source/trove4j-3.0.3-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="staticlib/animal-sniffer-annotations-1.17.jar"/>
